Fixed /login and /signup text box width to align.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -648,7 +648,8 @@ room-sidebar-width = 200px
     margin-bottom 20px
 
   input[type=text], input[type=email], input[type=password]
-    width 188px
+    box-sizing border-box
+    width 100%
     margin 0
     border 1px solid #D4D4D4
     padding 6px 11px
@@ -696,9 +697,6 @@ room-sidebar-width = 200px
     &:hover
       opacity 1
 
-  input[type=text], input[type=email], input[type=password]
-    width 188px
-
   .facebook-group
     text-align center
 
@@ -715,9 +713,6 @@ room-sidebar-width = 200px
 
     &:hover
       opacity 1
-
-  input[type=text], input[type=email], input[type=password]
-    width 188px
 
   .related-link
     font-size 9px
